Fixing logo on mobile

--- a/CTFd/static/css/style.css
+++ b/CTFd/static/css/style.css
@@ -115,7 +115,8 @@ table{
 
 .logo{
     margin: 0 auto;
-    width: 500px;
+    width: 100%;
+    max-width: 500px;
     padding: 50px;
     display: block;
 }
